// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ThoughtCard > snapshot tests > matches snapshot for basic thought card 1`] = `
<div
  class=""
  data-testid="thought-card"
  role="article"
  style="padding: 16px; border-width: 1px; border-style: solid; border-color: rgb(225, 228, 232); border-radius: 6px; background-color: rgb(255, 255, 255); box-shadow: 0 1px 3px rgba(0, 0, 0, 0.08); transition: all 0.2s ease-in-out; cursor: pointer;"
>
  <h3
    style="font-size: 16px; font-weight: 600; margin: 0px 0px 8px 0px; color: rgb(36, 41, 47); line-height: 1.4;"
  >
    Test Thought
  </h3>
  <p
    style="font-size: 14px; color: rgb(87, 96, 106); margin: 0px 0px 8px 0px; line-height: 1.5;"
  >
    This is a test thought content that should be displayed in the card.
  </p>
  <div
    style="display: flex; justify-content: space-between; align-items: center; font-size: 12px; color: rgb(110, 119, 129);"
  >
    <span
      style="font-size: 12px; color: rgb(110, 119, 129);"
    >
      20 hours ago
    </span>
  </div>
  <div
    style="margin-top: 8px;"
  >
    <div
      class=""
      data-testid="tag-display"
      style="display: flex; flex-wrap: wrap; gap: 4px; align-items: center;"
    >
      <span
        data-testid="tag-chip-work"
        style="display: inline-block; background-color: rgb(231, 76, 60); color: rgb(255, 255, 255); padding: 4px 8px; border-radius: 12px; font-size: 11px; font-weight: 500; white-space: nowrap; line-height: 1.4;"
      >
        work
      </span>
      <span
        data-testid="tag-chip-urgent"
        style="display: inline-block; background-color: rgb(133, 193, 226); color: rgb(0, 0, 0); padding: 4px 8px; border-radius: 12px; font-size: 11px; font-weight: 500; white-space: nowrap; line-height: 1.4;"
      >
        urgent
      </span>
    </div>
  </div>
</div>
`;

exports[`ThoughtCard > snapshot tests > matches snapshot for thought with many tags 1`] = `
<div
  class=""
  data-testid="thought-card"
  role="article"
  style="padding: 16px; border-width: 1px; border-style: solid; border-color: rgb(225, 228, 232); border-radius: 6px; background-color: rgb(255, 255, 255); box-shadow: 0 1px 3px rgba(0, 0, 0, 0.08); transition: all 0.2s ease-in-out; cursor: pointer;"
>
  <h3
    style="font-size: 16px; font-weight: 600; margin: 0px 0px 8px 0px; color: rgb(36, 41, 47); line-height: 1.4;"
  >
    Test Thought
  </h3>
  <p
    style="font-size: 14px; color: rgb(87, 96, 106); margin: 0px 0px 8px 0px; line-height: 1.5;"
  >
    This is a test thought content that should be displayed in the card.
  </p>
  <div
    style="display: flex; justify-content: space-between; align-items: center; font-size: 12px; color: rgb(110, 119, 129);"
  >
    <span
      style="font-size: 12px; color: rgb(110, 119, 129);"
    >
      20 hours ago
    </span>
  </div>
  <div
    style="margin-top: 8px;"
  >
    <div
      class=""
      data-testid="tag-display"
      style="display: flex; flex-wrap: wrap; gap: 4px; align-items: center;"
    >
      <span
        data-testid="tag-chip-work"
        style="display: inline-block; background-color: rgb(231, 76, 60); color: rgb(255, 255, 255); padding: 4px 8px; border-radius: 12px; font-size: 11px; font-weight: 500; white-space: nowrap; line-height: 1.4;"
      >
        work
      </span>
      <span
        data-testid="tag-chip-urgent"
        style="display: inline-block; background-color: rgb(133, 193, 226); color: rgb(0, 0, 0); padding: 4px 8px; border-radius: 12px; font-size: 11px; font-weight: 500; white-space: nowrap; line-height: 1.4;"
      >
        urgent
      </span>
      <span
        data-testid="tag-chip-personal"
        style="display: inline-block; background-color: rgb(69, 183, 209); color: rgb(0, 0, 0); padding: 4px 8px; border-radius: 12px; font-size: 11px; font-weight: 500; white-space: nowrap; line-height: 1.4;"
      >
        personal
      </span>
      <span
        data-testid="tag-chip-ideas"
        style="display: inline-block; background-color: rgb(247, 220, 111); color: rgb(0, 0, 0); padding: 4px 8px; border-radius: 12px; font-size: 11px; font-weight: 500; white-space: nowrap; line-height: 1.4;"
      >
        ideas
      </span>
      <span
        data-testid="tag-chip-reflection"
        style="display: inline-block; background-color: rgb(152, 216, 200); color: rgb(0, 0, 0); padding: 4px 8px; border-radius: 12px; font-size: 11px; font-weight: 500; white-space: nowrap; line-height: 1.4;"
      >
        reflection
      </span>
    </div>
  </div>
</div>
`;

exports[`ThoughtCard > snapshot tests > matches snapshot for thought with no tags 1`] = `
<div
  class=""
  data-testid="thought-card"
  role="article"
  style="padding: 16px; border-width: 1px; border-style: solid; border-color: rgb(225, 228, 232); border-radius: 6px; background-color: rgb(255, 255, 255); box-shadow: 0 1px 3px rgba(0, 0, 0, 0.08); transition: all 0.2s ease-in-out; cursor: pointer;"
>
  <h3
    style="font-size: 16px; font-weight: 600; margin: 0px 0px 8px 0px; color: rgb(36, 41, 47); line-height: 1.4;"
  >
    Test Thought
  </h3>
  <p
    style="font-size: 14px; color: rgb(87, 96, 106); margin: 0px 0px 8px 0px; line-height: 1.5;"
  >
    This is a test thought content that should be displayed in the card.
  </p>
  <div
    style="display: flex; justify-content: space-between; align-items: center; font-size: 12px; color: rgb(110, 119, 129);"
  >
    <span
      style="font-size: 12px; color: rgb(110, 119, 129);"
    >
      20 hours ago
    </span>
  </div>
</div>
`;

exports[`ThoughtCard > snapshot tests > matches snapshot for thought with very long content 1`] = `
<div
  class=""
  data-testid="thought-card"
  role="article"
  style="padding: 16px; border-width: 1px; border-style: solid; border-color: rgb(225, 228, 232); border-radius: 6px; background-color: rgb(255, 255, 255); box-shadow: 0 1px 3px rgba(0, 0, 0, 0.08); transition: all 0.2s ease-in-out; cursor: pointer;"
>
  <h3
    style="font-size: 16px; font-weight: 600; margin: 0px 0px 8px 0px; color: rgb(36, 41, 47); line-height: 1.4;"
  >
    Test Thought
  </h3>
  <p
    style="font-size: 14px; color: rgb(87, 96, 106); margin: 0px 0px 8px 0px; line-height: 1.5;"
  >
    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed do eiusmod tempor incididunt ut labore ...
  </p>
  <div
    style="display: flex; justify-content: space-between; align-items: center; font-size: 12px; color: rgb(110, 119, 129);"
  >
    <span
      style="font-size: 12px; color: rgb(110, 119, 129);"
    >
      20 hours ago
    </span>
  </div>
  <div
    style="margin-top: 8px;"
  >
    <div
      class=""
      data-testid="tag-display"
      style="display: flex; flex-wrap: wrap; gap: 4px; align-items: center;"
    >
      <span
        data-testid="tag-chip-work"
        style="display: inline-block; background-color: rgb(231, 76, 60); color: rgb(255, 255, 255); padding: 4px 8px; border-radius: 12px; font-size: 11px; font-weight: 500; white-space: nowrap; line-height: 1.4;"
      >
        work
      </span>
      <span
        data-testid="tag-chip-urgent"
        style="display: inline-block; background-color: rgb(133, 193, 226); color: rgb(0, 0, 0); padding: 4px 8px; border-radius: 12px; font-size: 11px; font-weight: 500; white-space: nowrap; line-height: 1.4;"
      >
        urgent
      </span>
    </div>
  </div>
</div>
`;

exports[`ThoughtCard > snapshot tests > matches snapshot with custom className 1`] = `
<div
  class="custom-class highlight"
  data-testid="thought-card"
  role="article"
  style="padding: 16px; border-width: 1px; border-style: solid; border-color: rgb(225, 228, 232); border-radius: 6px; background-color: rgb(255, 255, 255); box-shadow: 0 1px 3px rgba(0, 0, 0, 0.08); transition: all 0.2s ease-in-out; cursor: pointer;"
>
  <h3
    style="font-size: 16px; font-weight: 600; margin: 0px 0px 8px 0px; color: rgb(36, 41, 47); line-height: 1.4;"
  >
    Test Thought
  </h3>
  <p
    style="font-size: 14px; color: rgb(87, 96, 106); margin: 0px 0px 8px 0px; line-height: 1.5;"
  >
    This is a test thought content that should be displayed in the card.
  </p>
  <div
    style="display: flex; justify-content: space-between; align-items: center; font-size: 12px; color: rgb(110, 119, 129);"
  >
    <span
      style="font-size: 12px; color: rgb(110, 119, 129);"
    >
      20 hours ago
    </span>
  </div>
  <div
    style="margin-top: 8px;"
  >
    <div
      class=""
      data-testid="tag-display"
      style="display: flex; flex-wrap: wrap; gap: 4px; align-items: center;"
    >
      <span
        data-testid="tag-chip-work"
        style="display: inline-block; background-color: rgb(231, 76, 60); color: rgb(255, 255, 255); padding: 4px 8px; border-radius: 12px; font-size: 11px; font-weight: 500; white-space: nowrap; line-height: 1.4;"
      >
        work
      </span>
      <span
        data-testid="tag-chip-urgent"
        style="display: inline-block; background-color: rgb(133, 193, 226); color: rgb(0, 0, 0); padding: 4px 8px; border-radius: 12px; font-size: 11px; font-weight: 500; white-space: nowrap; line-height: 1.4;"
      >
        urgent
      </span>
    </div>
  </div>
</div>
`;

exports[`ThoughtCard > snapshot tests > matches snapshot with onHighlight callback 1`] = `
<div
  class=""
  data-testid="thought-card"
  role="article"
  style="padding: 16px; border-width: 1px; border-style: solid; border-color: rgb(225, 228, 232); border-radius: 6px; background-color: rgb(255, 255, 255); box-shadow: 0 1px 3px rgba(0, 0, 0, 0.08); transition: all 0.2s ease-in-out; cursor: pointer;"
>
  <h3
    style="font-size: 16px; font-weight: 600; margin: 0px 0px 8px 0px; color: rgb(36, 41, 47); line-height: 1.4;"
  >
    Test Thought
  </h3>
  <p
    style="font-size: 14px; color: rgb(87, 96, 106); margin: 0px 0px 8px 0px; line-height: 1.5;"
  >
    This is a test thought content that should be displayed in the card.
  </p>
  <div
    style="display: flex; justify-content: space-between; align-items: center; font-size: 12px; color: rgb(110, 119, 129);"
  >
    <span
      style="font-size: 12px; color: rgb(110, 119, 129);"
    >
      20 hours ago
    </span>
  </div>
  <div
    style="margin-top: 8px;"
  >
    <div
      class=""
      data-testid="tag-display"
      style="display: flex; flex-wrap: wrap; gap: 4px; align-items: center;"
    >
      <span
        data-testid="tag-chip-work"
        style="display: inline-block; background-color: rgb(231, 76, 60); color: rgb(255, 255, 255); padding: 4px 8px; border-radius: 12px; font-size: 11px; font-weight: 500; white-space: nowrap; line-height: 1.4;"
      >
        work
      </span>
      <span
        data-testid="tag-chip-urgent"
        style="display: inline-block; background-color: rgb(133, 193, 226); color: rgb(0, 0, 0); padding: 4px 8px; border-radius: 12px; font-size: 11px; font-weight: 500; white-space: nowrap; line-height: 1.4;"
      >
        urgent
      </span>
    </div>
  </div>
</div>
`;
